Added fluency scores to az, bn, ca reports

--- a/reports/mono-1.2/HPLT-docslite.az.yaml
+++ b/reports/mono-1.2/HPLT-docslite.az.yaml
@@ -312,6 +312,9 @@ docs_wds: '[[0.0, 59652], [0.1, 3161], [0.2, 1565], [0.3, 1815], [0.4, 1730], [0
   [8.7, 17783], [8.8, 16806], [8.9, 16301], [9.0, 14611], [9.1, 13969], [9.2, 12298],
   [9.3, 10700], [9.4, 9328], [9.5, 7633], [9.6, 6364], [9.7, 4706], [9.8, 3130], [9.9,
   1364], [10.0, 275]]'
+monocleaner_scores: '[[0.0, 20111265], [0.1, 4148337], [0.2, 5541934], [0.3, 10259828],
+  [0.4, 17060597], [0.5, 23828194], [0.6, 30637319], [0.7, 23581845], [0.8, 4183454],
+  [0.9, 164314]]'
 sentence_pairs: 139346876
 src_bytes: 8.99 GB
 src_langs: '[["az", 88825718], ["en", 16410043], ["tr", 10994621], ["de", 3833355],
