--- a/reports/mono-1.2/HPLT-docslite.bn.yaml
+++ b/reports/mono-1.2/HPLT-docslite.bn.yaml
@@ -387,6 +387,9 @@ docs_wds: '[[0.0, 181588], [0.1, 4189], [0.2, 5098], [0.3, 6532], [0.4, 6634], [
   [8.6, 14860], [8.7, 13684], [8.8, 11665], [8.9, 10630], [9.0, 8850], [9.1, 8152],
   [9.2, 5570], [9.3, 4146], [9.4, 3337], [9.5, 2563], [9.6, 1882], [9.7, 1158], [9.8,
   614], [9.9, 209], [10.0, 36]]'
+monocleaner_scores: '[[0.0, 13487919], [0.1, 5098733], [0.2, 7053426], [0.3, 9984204],
+  [0.4, 18829132], [0.5, 31750332], [0.6, 50507048], [0.7, 74438969], [0.8, 86599087],
+  [0.9, 32621372]]'
 sentence_pairs: 330215118
 src_bytes: 40.7 GB
 src_langs: '[["bn", 244504907], ["en", 59687599], ["bpy", 3738491], ["fr", 3253147],
