--- a/reports/mono-1.2/HPLT-docslite.ca.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ca.yaml
@@ -544,6 +544,9 @@ docs_wds: '[[0.0, 133460], [0.1, 4642], [0.2, 4765], [0.3, 4860], [0.4, 6082], [
   [8.3, 76720], [8.4, 70378], [8.5, 64952], [8.6, 60907], [8.7, 56545], [8.8, 51568],
   [8.9, 46142], [9.0, 39881], [9.1, 34484], [9.2, 29427], [9.3, 23611], [9.4, 18597],
   [9.5, 14003], [9.6, 9958], [9.7, 5810], [9.8, 2884], [9.9, 935], [10.0, 169]]'
+monocleaner_scores: '[[0.0, 29190687], [0.1, 21183305], [0.2, 30922860], [0.3, 48383291],
+  [0.4, 62496190], [0.5, 81590163], [0.6, 84238052], [0.7, 97938061], [0.8, 109854163],
+  [0.9, 57467133]]'
 sentence_pairs: 623010179
 src_bytes: 33.42 GB
 src_langs: '[["ca", 353525103], ["en", 74775922], ["es", 55925117], ["fr", 38561609],
