Added fluency scores to et, lt and lv reports

--- a/reports/mono-1.2/HPLT-docslite.et.yaml
+++ b/reports/mono-1.2/HPLT-docslite.et.yaml
@@ -442,6 +442,9 @@ docs_wds: '[[0.0, 53469], [0.1, 1855], [0.2, 2074], [0.3, 2340], [0.4, 3544], [0
   [8.6, 22562], [8.7, 22963], [8.8, 21565], [8.9, 19817], [9.0, 16964], [9.1, 14148],
   [9.2, 13622], [9.3, 13135], [9.4, 12706], [9.5, 11675], [9.6, 9370], [9.7, 5744],
   [9.8, 3069], [9.9, 1149], [10.0, 323]]'
+monocleaner_scores: '[[0.0, 13680750], [0.1, 6675476], [0.2, 11293274], [0.3, 16567027],
+  [0.4, 22659480], [0.5, 26160998], [0.6, 25999482], [0.7, 32202230], [0.8, 30344253],
+  [0.9, 9925206]]'
 sentence_pairs: 195463992
 src_bytes: 12.24 GB
 src_langs: '[["et", 111378832], ["en", 31768585], ["fi", 8204550], ["de", 7911252],
