--- a/reports/mono-1.2/HPLT-docslite.lt.yaml
+++ b/reports/mono-1.2/HPLT-docslite.lt.yaml
@@ -440,6 +440,9 @@ docs_wds: '[[0.0, 126726], [0.1, 3726], [0.2, 3078], [0.3, 4120], [0.4, 4440], [
   [8.4, 52794], [8.5, 52145], [8.6, 51415], [8.7, 52539], [8.8, 49233], [8.9, 46190],
   [9.0, 41203], [9.1, 34839], [9.2, 32825], [9.3, 31790], [9.4, 30278], [9.5, 29522],
   [9.6, 22964], [9.7, 13425], [9.8, 6786], [9.9, 2759], [10.0, 739]]'
+monocleaner_scores: '[[0.0, 22071427], [0.1, 6606019], [0.2, 11633177], [0.3, 21507102],
+  [0.4, 27782105], [0.5, 31211647], [0.6, 42810885], [0.7, 59102985], [0.8, 74187681],
+  [0.9, 35855307]]'
 sentence_pairs: 332443029
 src_bytes: 21.59 GB
 src_langs: '[["lt", 216190959], ["en", 43112985], ["fr", 7587360], ["de", 7307807],
