--- a/reports/mono-1.2/HPLT-docslite.lv.yaml
+++ b/reports/mono-1.2/HPLT-docslite.lv.yaml
@@ -449,6 +449,9 @@ docs_wds: '[[0.0, 47679], [0.1, 1480], [0.2, 1622], [0.3, 1869], [0.4, 2431], [0
   25896], [8.6, 24810], [8.7, 24448], [8.8, 23126], [8.9, 21709], [9.0, 19407], [9.1,
   17111], [9.2, 15547], [9.3, 13861], [9.4, 12074], [9.5, 10185], [9.6, 7736], [9.7,
   4679], [9.8, 2610], [9.9, 900], [10.0, 187]]'
+monocleaner_scores: '[[0.0, 13075570], [0.1, 4035688], [0.2, 7286688], [0.3, 11719085],
+  [0.4, 16888787], [0.5, 21138789], [0.6, 25435241], [0.7, 33758049], [0.8, 35872614],
+  [0.9, 16410038]]'
 sentence_pairs: 185494115
 src_bytes: 11.55 GB
 src_langs: '[["lv", 112839275], ["en", 28029017], ["fr", 6415872], ["de", 4643975],
