Add reports for bg, da, fi, hbs, he, hi, ms, nb, sk, sl, sq, ta, th, uk, ur and ro

--- a/reports/mono-1.2/HPLT-docslite.bg.yaml
+++ b/reports/mono-1.2/HPLT-docslite.bg.yaml
@@ -660,6 +660,9 @@ docs_wds: '[[0.0, 37604], [0.1, 1775], [0.2, 1942], [0.3, 2103], [0.4, 2554], [0
   [8.5, 55800], [8.6, 53205], [8.7, 50466], [8.8, 47053], [8.9, 42221], [9.0, 37849],
   [9.1, 34781], [9.2, 32976], [9.3, 30821], [9.4, 27944], [9.5, 23420], [9.6, 17633],
   [9.7, 10279], [9.8, 5002], [9.9, 1714], [10.0, 308]]'
+monocleaner_scores: '[[0.0, 78138891], [0.1, 33166128], [0.2, 50436658], [0.3, 68918285],
+  [0.4, 81547021], [0.5, 95288875], [0.6, 131694170], [0.7, 158087246], [0.8, 163470868],
+  [0.9, 51884831]]'
 sentence_pairs: 538385172
 src_bytes: 50.14 GB
 src_langs: '[["bg", 541799678], ["ru", 134476328], ["en", 94924692], ["uk", 21223395],
