--- a/reports/mono-1.2/HPLT-docslite.da.yaml
+++ b/reports/mono-1.2/HPLT-docslite.da.yaml
@@ -564,6 +564,9 @@ docs_wds: '[[0.0, 176333], [0.1, 6145], [0.2, 6449], [0.3, 7376], [0.4, 8818], [
   [8.7, 72006], [8.8, 69176], [8.9, 55823], [9.0, 45070], [9.1, 36634], [9.2, 32269],
   [9.3, 27398], [9.4, 22409], [9.5, 17547], [9.6, 12536], [9.7, 7959], [9.8, 4108],
   [9.9, 2635], [10.0, 1267]]'
+monocleaner_scores: '[[0.0, 60692397], [0.1, 30618486], [0.2, 52377104], [0.3, 78263799],
+  [0.4, 111149015], [0.5, 136074621], [0.6, 168523982], [0.7, 160497772], [0.8, 148847459],
+  [0.9, 46775014]]'
 sentence_pairs: 726820478
 src_bytes: 43.17 GB
 src_langs: '[["da", 548662864], ["en", 185966144], ["de", 46519117], ["sv", 37547941],
