--- a/reports/mono-1.2/HPLT-docslite.fi.yaml
+++ b/reports/mono-1.2/HPLT-docslite.fi.yaml
@@ -553,6 +553,9 @@ docs_wds: '[[0.0, 95524], [0.1, 3768], [0.2, 4206], [0.3, 5102], [0.4, 5897], [0
   83794], [8.4, 77636], [8.5, 73066], [8.6, 67300], [8.7, 64848], [8.8, 58623], [8.9,
   52283], [9.0, 48619], [9.1, 36752], [9.2, 33654], [9.3, 30109], [9.4, 26371], [9.5,
   22513], [9.6, 18363], [9.7, 11789], [9.8, 6223], [9.9, 2198], [10.0, 540]]'
+monocleaner_scores: '[[0.0, 40705068], [0.1, 26255566], [0.2, 47101191], [0.3, 66833336],
+  [0.4, 129324810], [0.5, 192755777], [0.6, 140293678], [0.7, 178035605], [0.8, 175454535],
+  [0.9, 37965002]]'
 sentence_pairs: 504776624
 src_bytes: 34.89 GB
 src_langs: '[["fi", 770327546], ["en", 115787705], ["de", 19936090], ["fr", 16678260],
