--- a/reports/mono-1.2/HPLT-docslite.hbs.yaml
+++ b/reports/mono-1.2/HPLT-docslite.hbs.yaml
@@ -687,6 +687,9 @@ docs_total: 8680801
 docs_warnings:
 - docs_unmatching_9616
 docs_wds: '[[0.0, 8671185]]'
+monocleaner_scores: '[[0.0, 73365205], [0.1, 31874482], [0.2, 44490440], [0.3, 71319499],
+  [0.4, 110969927], [0.5, 153325656], [0.6, 181469333], [0.7, 207614135], [0.8, 207929706],
+  [0.9, 59454996]]'
 sentence_pairs: 1140919309
 src_bytes: 66.78 GB
 src_langs: '[["hbs_lat", 571954097], ["en", 194703246], ["hbs_cyr", 77546040], ["sl",
