--- a/reports/mono-1.2/HPLT-docslite.he.yaml
+++ b/reports/mono-1.2/HPLT-docslite.he.yaml
@@ -556,6 +556,9 @@ docs_wds: '[[0.0, 182154], [0.1, 4046], [0.2, 4310], [0.3, 4401], [0.4, 4437], [
   97446], [8.4, 92554], [8.5, 85698], [8.6, 79109], [8.7, 69831], [8.8, 68020], [8.9,
   68089], [9.0, 71732], [9.1, 63092], [9.2, 56849], [9.3, 47414], [9.4, 36945], [9.5,
   25826], [9.6, 19544], [9.7, 13392], [9.8, 8175], [9.9, 3608], [10.0, 1167]]'
+monocleaner_scores: '[[0.0, 180347098], [0.1, 30617938], [0.2, 38154384], [0.3, 49658112],
+  [0.4, 75776314], [0.5, 108018321], [0.6, 123015782], [0.7, 142022472], [0.8, 78952456],
+  [0.9, 12278829]]'
 sentence_pairs: 838116375
 src_bytes: 65.29 GB
 src_langs: '[["he", 687024695], ["en", 100004687], ["it", 6783048], ["fr", 6732808],
