--- a/reports/mono-1.2/HPLT-docslite.hi.yaml
+++ b/reports/mono-1.2/HPLT-docslite.hi.yaml
@@ -511,6 +511,9 @@ docs_wds: '[[0.0, 275944], [0.1, 26821], [0.2, 36940], [0.3, 38092], [0.4, 38414
   [8.8, 18632], [8.9, 16304], [9.0, 12551], [9.1, 10223], [9.2, 7986], [9.3, 6695],
   [9.4, 5681], [9.5, 4555], [9.6, 3877], [9.7, 2580], [9.8, 1606], [9.9, 644], [10.0,
   194]]'
+monocleaner_scores: '[[0.0, 42648752], [0.1, 23958701], [0.2, 52681441], [0.3, 95171993],
+  [0.4, 115274673], [0.5, 127618905], [0.6, 136723959], [0.7, 131039304], [0.8, 92635458],
+  [0.9, 37707739]]'
 sentence_pairs: 855081850
 src_bytes: 81.68 GB
 src_langs: '[["hi", 472198834], ["en", 260471628], ["mr", 21435655], ["es", 10417550],
