--- a/reports/mono-1.2/HPLT-docslite.ms.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ms.yaml
@@ -787,6 +787,9 @@ docs_wds: '[[0.0, 643697], [0.1, 150394], [0.2, 127443], [0.3, 119901], [0.4, 12
   [7.7, 592], [7.8, 566], [7.9, 414], [8.0, 424], [8.1, 370], [8.2, 260], [8.3, 211],
   [8.4, 180], [8.5, 173], [8.6, 120], [8.7, 106], [8.8, 91], [8.9, 81], [9.0, 65],
   [9.1, 67], [9.2, 13], [9.3, 9], [9.4, 5], [9.5, 3], [9.6, 3], [9.8, 1]]'
+monocleaner_scores: '[[0.0, 67712104], [0.1, 189489912], [0.2, 138371590], [0.3, 102836019],
+  [0.4, 130916488], [0.5, 141443883], [0.6, 141306022], [0.7, 107643387], [0.8, 89264520],
+  [0.9, 22969386]]'
 sentence_pairs: 1131639016
 src_bytes: 52.89 GB
 src_langs: '[["en", 328228834], ["id", 223808831], ["cs", 160860136], ["ms", 119612978],
