--- a/reports/mono-1.2/HPLT-docslite.nb.yaml
+++ b/reports/mono-1.2/HPLT-docslite.nb.yaml
@@ -582,6 +582,9 @@ docs_wds: '[[0.0, 169710], [0.1, 4918], [0.2, 5463], [0.3, 6572], [0.4, 9541], [
   59862], [8.8, 54256], [8.9, 48192], [9.0, 43483], [9.1, 39223], [9.2, 32607], [9.3,
   29921], [9.4, 27265], [9.5, 18501], [9.6, 12767], [9.7, 8196], [9.8, 4462], [9.9,
   2121], [10.0, 559]]'
+monocleaner_scores: '[[0.0, 42663506], [0.1, 23062145], [0.2, 38235463], [0.3, 66239707],
+  [0.4, 100192688], [0.5, 121045789], [0.6, 130074101], [0.7, 144146510], [0.8, 105305503],
+  [0.9, 17119553]]'
 sentence_pairs: 787825315
 src_bytes: 49.2 GB
 src_langs: '[["nb", 420168436], ["en", 138377148], ["sv", 51590212], ["de", 34503248],
