--- a/reports/mono-1.2/HPLT-docslite.sk.yaml
+++ b/reports/mono-1.2/HPLT-docslite.sk.yaml
@@ -545,6 +545,9 @@ docs_wds: '[[0.0, 167238], [0.1, 6780], [0.2, 8665], [0.3, 9943], [0.4, 11873], 
   [8.3, 73438], [8.4, 66368], [8.5, 61362], [8.6, 57781], [8.7, 56293], [8.8, 52127],
   [8.9, 46654], [9.0, 41241], [9.1, 36263], [9.2, 31396], [9.3, 26303], [9.4, 21077],
   [9.5, 15810], [9.6, 11556], [9.7, 7778], [9.8, 4455], [9.9, 1315], [10.0, 246]]'
+monocleaner_scores: '[[0.0, 33863180], [0.1, 13182277], [0.2, 23152043], [0.3, 38712172],
+  [0.4, 59406332], [0.5, 79791960], [0.6, 91271531], [0.7, 103830282], [0.8, 97553908],
+  [0.9, 30987351]]'
 sentence_pairs: 571311967
 src_bytes: 33.41 GB
 src_langs: '[["sk", 330007121], ["en", 77865704], ["cs", 36044221], ["pl", 15445314],
