--- a/reports/mono-1.2/HPLT-docslite.sl.yaml
+++ b/reports/mono-1.2/HPLT-docslite.sl.yaml
@@ -429,6 +429,9 @@ docs_wds: '[[0.0, 53430], [0.1, 1568], [0.2, 1666], [0.3, 1994], [0.4, 2558], [0
   36895], [8.5, 34096], [8.6, 32174], [8.7, 30940], [8.8, 29210], [8.9, 25645], [9.0,
   22497], [9.1, 19868], [9.2, 17567], [9.3, 15222], [9.4, 13395], [9.5, 10534], [9.6,
   7808], [9.7, 4903], [9.8, 2455], [9.9, 923], [10.0, 182]]'
+monocleaner_scores: '[[0.0, 21548636], [0.1, 7185495], [0.2, 13940807], [0.3, 22122400],
+  [0.4, 30187018], [0.5, 34540630], [0.6, 42596749], [0.7, 46526820], [0.8, 49021797],
+  [0.9, 17952729]]'
 sentence_pairs: 285527540
 src_bytes: 15.65 GB
 src_langs: '[["sl", 158456731], ["en", 44776328], ["hbs_lat", 10571935], ["de", 9615236],
