--- a/reports/mono-1.2/HPLT-docslite.sq.yaml
+++ b/reports/mono-1.2/HPLT-docslite.sq.yaml
@@ -329,6 +329,9 @@ docs_wds: '[[0.0, 97687], [0.1, 665], [0.2, 736], [0.3, 645], [0.4, 758], [0.5, 
   [8.7, 11872], [8.8, 10848], [8.9, 9392], [9.0, 8486], [9.1, 7587], [9.2, 6883],
   [9.3, 5889], [9.4, 5029], [9.5, 4088], [9.6, 3261], [9.7, 2349], [9.8, 1332], [9.9,
   522], [10.0, 90]]'
+monocleaner_scores: '[[0.0, 4433467], [0.1, 1439480], [0.2, 1632447], [0.3, 3512338],
+  [0.4, 6213982], [0.5, 12934415], [0.6, 20800028], [0.7, 29167322], [0.8, 39507703],
+  [0.9, 28037203]]'
 sentence_pairs: 147604123
 src_bytes: 8.09 GB
 src_langs: '[["sq", 68528645], ["en", 34685744], ["it", 4946447], ["es", 3518844],
