--- a/reports/mono-1.2/HPLT-docslite.ta.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ta.yaml
@@ -418,6 +418,9 @@ docs_wds: '[[0.0, 64479], [0.1, 1793], [0.2, 1659], [0.3, 1845], [0.4, 2143], [0
   [8.6, 20225], [8.7, 19824], [8.8, 19004], [8.9, 16680], [9.0, 15374], [9.1, 13942],
   [9.2, 12728], [9.3, 11620], [9.4, 10385], [9.5, 9207], [9.6, 7463], [9.7, 4831],
   [9.8, 2705], [9.9, 907], [10.0, 195]]'
+monocleaner_scores: '[[0.0, 6471234], [0.1, 4442031], [0.2, 12818377], [0.3, 13865593],
+  [0.4, 22180403], [0.5, 26918484], [0.6, 32789343], [0.7, 38773516], [0.8, 43138357],
+  [0.9, 16122685]]'
 sentence_pairs: 217408557
 src_bytes: 33.99 GB
 src_langs: '[["ta", 129200653], ["en", 58066830], ["cs", 10417720], ["da", 4099104],
