--- a/reports/mono-1.2/HPLT-docslite.th.yaml
+++ b/reports/mono-1.2/HPLT-docslite.th.yaml
@@ -570,6 +570,9 @@ docs_wds: '[[0.0, 661063], [0.1, 60736], [0.2, 71536], [0.3, 70656], [0.4, 68219
   14493], [8.8, 13891], [8.9, 13439], [9.0, 13969], [9.1, 9433], [9.2, 6654], [9.3,
   5321], [9.4, 4888], [9.5, 4641], [9.6, 4641], [9.7, 3478], [9.8, 2585], [9.9, 1298],
   [10.0, 584]]'
+monocleaner_scores: '[[0.0, 41587398], [0.1, 15342129], [0.2, 27678808], [0.3, 36206458],
+  [0.4, 64036359], [0.5, 114311040], [0.6, 138116000], [0.7, 101002142], [0.8, 54693507],
+  [0.9, 13132868]]'
 sentence_pairs: 605713959
 src_bytes: 102.15 GB
 src_langs: '[["th", 436899152], ["en", 131864492], ["fr", 6045352], ["de", 4051154],
