--- a/reports/mono-1.2/HPLT-docslite.ur.yaml
+++ b/reports/mono-1.2/HPLT-docslite.ur.yaml
@@ -347,6 +347,9 @@ docs_wds: '[[0.0, 37342], [0.1, 3284], [0.2, 8290], [0.3, 15737], [0.4, 25719], 
   [8.6, 6543], [8.7, 6442], [8.8, 5708], [8.9, 5839], [9.0, 4646], [9.1, 4073], [9.2,
   2812], [9.3, 2231], [9.4, 1838], [9.5, 1333], [9.6, 1023], [9.7, 687], [9.8, 443],
   [9.9, 188], [10.0, 54]]'
+monocleaner_scores: '[[0.0, 15351993], [0.1, 7486059], [0.2, 14082714], [0.3, 20017330],
+  [0.4, 20701465], [0.5, 18630666], [0.6, 16019618], [0.7, 13205846], [0.8, 9711462],
+  [0.9, 1527340]]'
 sentence_pairs: 136409453
 src_bytes: 10.61 GB
 src_langs: '[["ur", 64663913], ["en", 31141846], ["fa", 14907916], ["pnb", 4879083],
