Fix document stats for language codes that include script, added hbs report

--- a/reports/mono-1.2/HPLT-docslite.hbs.yaml
+++ b/reports/mono-1.2/HPLT-docslite.hbs.yaml
@@ -1,9 +1,9 @@
-corpus: HPLT-docslite.hbs.tsv
 docs_avg_lm: '[[0.0, 5], [0.1, 811], [0.2, 12619], [0.3, 81636], [0.4, 313271], [0.5,
   1510394], [0.6, 3826221], [0.7, 2636259], [0.8, 280035], [0.9, 9931], [1.0, 3]]'
 docs_collections: '[["cc40", 3620538], ["wide16", 2622829], ["wide15", 1383087], ["wide17",
   1044731]]'
-docs_langs: '[[0.0, 8671185]]'
+docs_langs: '[[0.2, 143149], [0.3, 416429], [0.4, 1028889], [0.5, 2078997], [0.6,
+  2207869], [0.7, 1697955], [0.8, 770850], [0.9, 225667], [1.0, 101380]]'
 docs_segments: '[[1, 3052], [2, 102663], [3, 5848], [4, 36285], [5, 6842], [6, 40275],
   [7, 49741], [8, 23029], [9, 12840], [10, 22252], [11, 12561], [12, 23800], [13,
   16899], [14, 24724], [15, 72133], [16, 34260], [17, 16849], [18, 23892], [19, 21208],
@@ -633,7 +633,7 @@ docs_segments: '[[1, 3052], [2, 102663], [3, 5848], [4, 36285], [5, 6842], [6, 4
   [202212, 1], [285377, 1], [320302, 1], [385392, 1]]'
 docs_segments_mean: 132
 docs_segments_median: 98
-docs_timestamp: 1717922569.407495
+docs_timestamp: 1718383900.3986351
 docs_top100_domains: '[["diebuchsuche.com", 189074], ["e-rjecnik.net", 100439], ["dnevnik.hr",
   79031], ["wikipedia.org", 78671], ["karta-hrvatske.com.hr", 77441], ["blogspot.rs",
   74128], ["forum.hr", 66705], ["blic.rs", 57272], ["blogspot.com", 54454], ["b92.net",
@@ -686,45 +686,63 @@ docs_top100_tld: '[["com", 2818872], ["hr", 1716566], ["rs", 1402913], ["net", 5
 docs_total: 8680801
 docs_warnings:
 - docs_unmatching_9616
-docs_wds: '[[0.0, 8671185]]'
-monocleaner_scores: '[[0.0, 73365205], [0.1, 31874482], [0.2, 44490440], [0.3, 71319499],
-  [0.4, 110969927], [0.5, 153325656], [0.6, 181469333], [0.7, 207614135], [0.8, 207929706],
-  [0.9, 59454996]]'
+docs_wds: '[[0.0, 287212], [0.1, 9131], [0.2, 9351], [0.3, 11592], [0.4, 11760], [0.5,
+  13464], [0.6, 16343], [0.7, 20388], [0.8, 27086], [0.9, 33607], [1.0, 35395], [1.1,
+  31829], [1.2, 27852], [1.3, 26326], [1.4, 26577], [1.5, 25999], [1.6, 25933], [1.7,
+  25589], [1.8, 25172], [1.9, 24617], [2.0, 23942], [2.1, 23411], [2.2, 24265], [2.3,
+  24976], [2.4, 25968], [2.5, 27298], [2.6, 28376], [2.7, 29390], [2.8, 30669], [2.9,
+  31584], [3.0, 33024], [3.1, 34609], [3.2, 36691], [3.3, 38163], [3.4, 41046], [3.5,
+  43699], [3.6, 46613], [3.7, 48869], [3.8, 52847], [3.9, 56452], [4.0, 59992], [4.1,
+  62505], [4.2, 64765], [4.3, 67534], [4.4, 70242], [4.5, 72851], [4.6, 76225], [4.7,
+  78408], [4.8, 81937], [4.9, 86499], [5.0, 89989], [5.1, 93835], [5.2, 98585], [5.3,
+  101619], [5.4, 108380], [5.5, 112984], [5.6, 119148], [5.7, 121593], [5.8, 129892],
+  [5.9, 133018], [6.0, 139170], [6.1, 144898], [6.2, 150924], [6.3, 157009], [6.4,
+  165328], [6.5, 168492], [6.6, 180381], [6.7, 183119], [6.8, 191009], [6.9, 200832],
+  [7.0, 201243], [7.1, 208735], [7.2, 214376], [7.3, 205847], [7.4, 212504], [7.5,
+  206959], [7.6, 196852], [7.7, 187558], [7.8, 187735], [7.9, 176930], [8.0, 173962],
+  [8.1, 162684], [8.2, 146089], [8.3, 135273], [8.4, 125029], [8.5, 134578], [8.6,
+  180326], [8.7, 103537], [8.8, 94004], [8.9, 84894], [9.0, 74389], [9.1, 65101],
+  [9.2, 59241], [9.3, 52497], [9.4, 45740], [9.5, 39015], [9.6, 29799], [9.7, 20327],
+  [9.8, 11763], [9.9, 4850], [10.0, 1070]]'
+corpus: HPLT-docslite.hbs.tsv
+monocleaner_scores: '[[0.0, 73283226], [0.1, 31860425], [0.2, 44466889], [0.3, 71267979],
+  [0.4, 110884504], [0.5, 153222230], [0.6, 181338693], [0.7, 207462161], [0.8, 207738523],
+  [0.9, 59394679]]'
 sentence_pairs: 1140919309
 src_bytes: 66.78 GB
-src_langs: '[["hbs_lat", 571954097], ["en", 194703246], ["hbs_cyr", 77546040], ["sl",
-  37140839], ["de", 30616034], ["fr", 26356510], ["it", 23665009], ["cs", 17168997],
-  ["pl", 16793709], ["es", 14594587], ["pt", 10713108], ["ru", 10408785], ["mk", 9473927],
-  ["sv", 8441819], ["eo", 7993334], ["id", 7283215], ["hu", 6685075], ["nl", 5619472],
-  ["tr", 5010218], ["sk", 4225186], ["lt", 4047768], ["nb", 3631420], ["ceb", 3328445],
-  ["fi", 3255901], ["bg", 2834232], ["zh", 2811297], ["uk", 2463353], ["ro", 2398214],
-  ["da", 2393255], ["ca", 2139778], ["eu", 1994193], ["ja", 1805421], ["ce", 1736456],
-  ["ms", 1662051], ["rm", 1376450], ["ur", 1261758], ["vi", 1162698], ["et", 1057888],
-  ["oc", 926453], ["sq", 798725], ["tt", 667071], ["fa", 642443], ["af", 616225],
-  ["lv", 602843], ["uz", 581798], ["la", 546426], ["tl", 519403], ["el", 490019],
-  ["ar", 409772], ["az", 392620], ["ko", 377543], ["kk", 377049], ["war", 314487],
-  ["ky", 293199], ["gl", 251163], ["is", 247386], ["gom", 214460], ["ilo", 205378],
-  ["nds", 200621], ["io", 194058], ["hsb", 178434], ["br", 167462], ["be", 156886],
-  ["th", 146097], ["jv", 140579], ["nn", 137127], ["he", 133779], ["ba", 130266],
-  ["os", 125289], ["km", 122055], ["ia", 112575], ["ta", 111569], ["cy", 111169],
-  ["ne", 110337], ["pms", 109585], ["hi", 97244], ["als", 90259], ["jbo", 86980],
-  ["fy", 79556], ["lb", 77631], ["kn", 69707], ["bn", 68962], ["mhr", 64499], ["hy",
-  62892], ["ml", 61121], ["sw", 61010], ["tg", 57928], ["mn", 55200], ["vo", 54219],
-  ["sc", 51856], ["pa", 48093], ["ht", 47264], ["li", 45921], ["dsb", 42513], ["sah",
-  40116], ["ka", 39167], ["bar", 37987], ["ie", 36810], ["cv", 35181], ["si", 33850],
-  ["te", 33285], ["pam", 32875], ["co", 32270], ["bo", 28602], ["eml", 27677], ["mt",
-  25317], ["gu", 24308], ["my", 23498], ["su", 22991], ["mr", 22546], ["ku", 22072],
-  ["mwl", 21427], ["min", 19761], ["kw", 19436], ["tk", 17492], ["qu", 17336], ["ast",
-  17102], ["ug", 17002], ["wa", 16825], ["mg", 16584], ["sco", 15640], ["ga", 15468],
-  ["ckb", 14766], ["or", 14345], ["arz", 13706], ["vls", 12387], ["an", 11729], ["gd",
-  11637], ["lmo", 11356], ["wuu", 10831], ["pnb", 10235], ["am", 9870], ["ps", 9322],
-  ["gn", 8718], ["mzn", 7385], ["kv", 7313], ["so", 7127], ["sa", 6804], ["lez", 6708],
-  ["scn", 6643], ["new", 5131], ["yue", 4271], ["frr", 4173], ["xal", 3862], ["vep",
-  3842], ["azb", 3789], ["as", 3773], ["diq", 3703], ["xmf", 3685], ["gv", 3677],
-  ["cbk", 3363], ["lo", 2820], ["mrj", 2818], ["bcl", 2589], ["myv", 2583], ["dv",
-  2548], ["yi", 2426], ["nap", 2421], ["yo", 2346], ["av", 2311], ["vec", 2244], ["sd",
-  2182], ["krc", 1946], ["rue", 1588], ["bxr", 1231], ["tyv", 1192], ["nah", 1153],
-  ["bpy", 944], ["bh", 769], ["mai", 602], ["pfl", 427], ["hif", 193], ["lrc", 174],
+src_langs: '[["hbs_lat", 571561037], ["en", 194535276], ["hbs_cyr", 77409533], ["sl",
+  37118891], ["de", 30590414], ["fr", 26336801], ["it", 23654317], ["cs", 17162037],
+  ["pl", 16782613], ["es", 14588940], ["pt", 10708400], ["ru", 10391057], ["mk", 9461198],
+  ["sv", 8436826], ["eo", 7988076], ["id", 7280335], ["hu", 6682019], ["nl", 5616986],
+  ["tr", 5007225], ["sk", 4222332], ["lt", 4044689], ["nb", 3629893], ["ceb", 3327075],
+  ["fi", 3254009], ["bg", 2832335], ["zh", 2809638], ["uk", 2459192], ["ro", 2396927],
+  ["da", 2392093], ["ca", 2138505], ["eu", 1992850], ["ja", 1803513], ["ce", 1736450],
+  ["ms", 1661659], ["rm", 1375870], ["ur", 1261398], ["vi", 1162320], ["et", 1056428],
+  ["oc", 926136], ["sq", 797990], ["tt", 667020], ["fa", 642016], ["af", 615760],
+  ["lv", 601420], ["uz", 581348], ["la", 546146], ["tl", 518919], ["el", 489591],
+  ["ar", 409456], ["az", 392315], ["ko", 377223], ["kk", 376950], ["war", 314392],
+  ["ky", 293120], ["gl", 250964], ["is", 247240], ["gom", 214456], ["ilo", 205308],
+  ["nds", 200583], ["io", 193975], ["hsb", 178358], ["br", 167283], ["be", 156834],
+  ["th", 146006], ["jv", 140537], ["nn", 137075], ["he", 133659], ["ba", 130248],
+  ["os", 125280], ["km", 122047], ["ia", 112545], ["ta", 111472], ["cy", 111153],
+  ["ne", 110334], ["pms", 109567], ["hi", 97141], ["als", 90204], ["jbo", 86961],
+  ["fy", 79541], ["lb", 77461], ["kn", 69580], ["bn", 68708], ["mhr", 64489], ["hy",
+  62806], ["ml", 61075], ["sw", 60998], ["tg", 57866], ["mn", 55167], ["vo", 54194],
+  ["sc", 51843], ["pa", 48088], ["ht", 47244], ["li", 45805], ["dsb", 42513], ["sah",
+  40115], ["ka", 39141], ["bar", 37982], ["ie", 36794], ["cv", 35174], ["si", 33815],
+  ["te", 33238], ["pam", 32863], ["co", 32270], ["bo", 28600], ["eml", 27592], ["mt",
+  25304], ["gu", 24279], ["my", 23492], ["su", 22988], ["mr", 22472], ["ku", 22054],
+  ["mwl", 21394], ["min", 19758], ["kw", 19426], ["tk", 17478], ["qu", 17331], ["ast",
+  17094], ["ug", 17000], ["wa", 16805], ["mg", 16573], ["sco", 15630], ["ga", 15466],
+  ["ckb", 14765], ["or", 14335], ["arz", 13703], ["vls", 12383], ["an", 11729], ["gd",
+  11631], ["lmo", 11353], ["wuu", 10823], ["pnb", 10235], ["am", 9870], ["ps", 9322],
+  ["gn", 8716], ["mzn", 7385], ["kv", 7311], ["so", 7122], ["sa", 6804], ["lez", 6703],
+  ["scn", 6641], ["new", 5131], ["yue", 4263], ["frr", 4170], ["xal", 3862], ["vep",
+  3826], ["azb", 3789], ["as", 3773], ["diq", 3700], ["xmf", 3685], ["gv", 3656],
+  ["cbk", 3358], ["lo", 2819], ["mrj", 2817], ["bcl", 2589], ["myv", 2581], ["dv",
+  2546], ["yi", 2424], ["nap", 2419], ["yo", 2335], ["av", 2308], ["vec", 2238], ["sd",
+  2182], ["krc", 1941], ["rue", 1585], ["bxr", 1231], ["tyv", 1192], ["nah", 1153],
+  ["bpy", 942], ["bh", 769], ["mai", 602], ["pfl", 427], ["hif", 193], ["lrc", 172],
   ["dty", 105]]'
 src_sent_tokens: '[[0, 20748184], [1, 254290569], [2, 164518420], [3, 112083663],
   [4, 74223873], [5, 73371249], [6, 52323661], [7, 36995295], [8, 31503554], [9, 32186293],
@@ -3834,7 +3852,7 @@ src_unique_sents: '[[0, 1], [1, 2036976], [2, 5832246], [3, 8725542], [4, 998523
   [200201, 1], [216833, 1], [217115, 1], [217486, 1], [223363, 1], [238204, 1], [263959,
   1], [267556, 1], [267826, 1], [301466, 1], [393929, 1], [442583, 1]]'
 srclang: hbs
-timestamp: 1717927689.6318498
+timestamp: 1718394508.875926
 unique_sents: 221956573
 warnings:
 - src_warning_tok_nltk_wordpunct
