--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "canvg": "^4.0.1",
     "formidable": "^3.5.1",
     "fs": "0.0.1-security",
+    "hamburger-react": "^2.5.1",
     "html-to-image": "^1.11.11",
     "js-yaml": "^4.1.0",
     "jspdf": "^2.5.1",
