Get CMD without file, lang distribution tooltip in parallel corpora, cmd fail alert, missing file alert for upload, spinner for upload, spinner for cmd, redirect for home link

--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "all-iso-language-codes": "^1.0.12",
+    "all-iso-language-codes": "^1.0.17",
     "axios": "^1.6.7",
     "canvg": "^4.0.1",
     "formidable": "^3.5.1",
@@ -27,8 +27,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
-    "react-toastify": "^10.0.4",
     "react-tooltip": "^5.26.3",
     "react-widgets": "^5.8.4",
     "recharts": "^2.9.3",
