--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -23,3 +23,5 @@ unidic-lite==1.0.8
 tldextract
 botok==0.8.12
 pathvalidate
+pii-manager @ git+https://github.com/mmanteli/multilingual-PII-tool@db59603
+iso639-lang==2.2.3
